// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree/demo/basic.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      />
    </span>
    <span
      class="ant-tree-checkbox ant-tree-checkbox-checked"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-disabled ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked ant-tree-treenode-selected"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <i
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          />
        </span>
        <span
          class="ant-tree-checkbox ant-tree-checkbox-checked ant-tree-checkbox-disabled"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
          title="parent 1-0"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-0
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          />
        </span>
        <span
          class="ant-tree-checkbox ant-tree-checkbox-checked"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="parent 1-1"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-1
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title=""
            >
              <span
                class="ant-tree-title"
              >
                <span
                  style="color:#1890ff"
                >
                  sss
                </span>
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/basic-controlled.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-indeterminate"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      />
    </span>
    <span
      class="ant-tree-checkbox ant-tree-checkbox-indeterminate"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="0-0"
    >
      <span
        class="ant-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open ant-tree-treenode-checkbox-checked"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          />
        </span>
        <span
          class="ant-tree-checkbox ant-tree-checkbox-checked"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="0-0-0"
        >
          <span
            class="ant-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close ant-tree-treenode-checkbox-checked"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox ant-tree-checkbox-checked"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          />
        </span>
        <span
          class="ant-tree-checkbox"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="0-0-1"
        >
          <span
            class="ant-tree-title"
          >
            0-0-1
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-0
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-1
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              class="ant-tree-checkbox"
            >
              <span
                class="ant-tree-checkbox-inner"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="0-0-1-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-1-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-checkbox"
        >
          <span
            class="ant-tree-checkbox-inner"
          />
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="0-0-2"
        >
          <span
            class="ant-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      />
    </span>
    <span
      class="ant-tree-checkbox"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
      title="0-1"
    >
      <span
        class="ant-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher-noop"
    />
    <span
      class="ant-tree-checkbox"
    >
      <span
        class="ant-tree-checkbox-inner"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
      title="0-2"
    >
      <span
        class="ant-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/customized-icon.md correctly 1`] = `
<ul
  class="ant-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-iconEle ant-tree-icon__customize"
      >
        <i
          class="anticon anticon-smile-o"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="smile"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M288 421a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm352 0a48 48 0 1 0 96 0 48 48 0 1 0-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2-44.3-18.7-84.1-45.6-118.3-79.8-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8c18.7-44.3 45.6-84.1 79.8-118.3 34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2 44.3 18.7 84.1 45.6 118.3 79.8 34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8c-18.7 44.3-45.6 84.1-79.8 118.2zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360c-4.6 0-8.2 3.8-8 8.4 4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6c.2-4.6-3.4-8.4-8-8.4z"
            />
          </svg>
        </i>
      </span>
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open ant-tree-treenode-selected"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal ant-tree-node-selected"
          title="leaf"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              class="anticon anticon-meh-o"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="meh"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M288 421a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm352 0a48 48 0 1 0 96 0 48 48 0 1 0-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2-44.3-18.7-84.1-45.6-118.3-79.8-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8c18.7-44.3 45.6-84.1 79.8-118.3 34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2 44.3 18.7 84.1 45.6 118.3 79.8 34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8c-18.7 44.3-45.6 84.1-79.8 118.2zM664 565H360c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h304c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              class="anticon anticon-frown-o"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="frown"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M288 421a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm352 0a48 48 0 1 0 96 0 48 48 0 1 0-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2-44.3-18.7-84.1-45.6-118.3-79.8-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8c18.7-44.3 45.6-84.1 79.8-118.3 34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2 44.3 18.7 84.1 45.6 118.3 79.8 34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8c-18.7 44.3-45.6 84.1-79.8 118.2zM512 533c-85.5 0-155.6 67.3-160 151.6-.2 4.6 3.4 8.4 8 8.4h48.1c4.2 0 7.8-3.2 8.1-7.4C420 636.1 461.5 597 512 597s92.1 39.1 95.8 88.6c.3 4.2 3.9 7.4 8.1 7.4H664c4.6 0 8.2-3.8 8-8.4-4.4-84.3-74.5-151.6-160-151.6z"
                />
              </svg>
            </i>
          </span>
          <span
            class="ant-tree-title"
          >
            leaf
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/directory.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-directory"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 0"
    >
      <span
        class="ant-tree-iconEle ant-tree-icon__customize"
      >
        <i
          class="anticon anticon-folder-open"
        />
      </span>
      <span
        class="ant-tree-title"
      >
        parent 0
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 0-0"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              class="anticon anticon-file"
            />
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 0-0
          </span>
        </span>
      </li>
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 0-1"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              class="anticon anticon-file"
            />
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 0-1
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-iconEle ant-tree-icon__customize"
      >
        <i
          class="anticon anticon-folder-open"
        />
      </span>
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 1-0"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              class="anticon anticon-file"
            />
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 1-0
          </span>
        </span>
      </li>
      <li
        class=""
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
          title="leaf 1-1"
        >
          <span
            class="ant-tree-iconEle ant-tree-icon__customize"
          >
            <i
              class="anticon anticon-file"
            />
          </span>
          <span
            class="ant-tree-title"
          >
            leaf 1-1
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/draggable.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide draggable-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      />
    </span>
    <span
      aria-grabbed="true"
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open draggable"
      draggable="true"
      title="0-0"
    >
      <span
        class="ant-tree-title"
      >
        0-0
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          />
        </span>
        <span
          aria-grabbed="true"
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open draggable"
          draggable="true"
          title="0-0-0"
        >
          <span
            class="ant-tree-title"
          >
            0-0-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-0"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-0
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-1"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-1
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            />
            <span
              aria-grabbed="true"
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
              draggable="true"
              title="0-0-0-2"
            >
              <span
                class="ant-tree-title"
              >
                0-0-0-2
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <i
            class="anticon anticon-caret-down ant-tree-switcher-icon"
          />
        </span>
        <span
          aria-grabbed="true"
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close draggable"
          draggable="true"
          title="0-0-1"
        >
          <span
            class="ant-tree-title"
          >
            0-0-1
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher-noop"
        />
        <span
          aria-grabbed="true"
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
          draggable="true"
          title="0-0-2"
        >
          <span
            class="ant-tree-title"
          >
            0-0-2
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      />
    </span>
    <span
      aria-grabbed="true"
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close draggable"
      draggable="true"
      title="0-1"
    >
      <span
        class="ant-tree-title"
      >
        0-1
      </span>
    </span>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher-noop"
    />
    <span
      aria-grabbed="true"
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal draggable"
      draggable="true"
      title="0-2"
    >
      <span
        class="ant-tree-title"
      >
        0-2
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/dynamic.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="ant-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class="ant-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_close"
    >
      <i
        class="anticon anticon-caret-down ant-tree-switcher-icon"
      />
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
      title="Expand to load"
    >
      <span
        class="ant-tree-title"
      >
        Expand to load
      </span>
    </span>
  </li>
  <li
    class=""
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher-noop"
    />
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
      title="Tree Node"
    >
      <span
        class="ant-tree-title"
      >
        Tree Node
      </span>
    </span>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/line.md correctly 1`] = `
<ul
  class="ant-tree ant-tree-icon-hide ant-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    class="ant-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="ant-tree-switcher ant-tree-switcher_open"
    >
      <i
        class="anticon anticon-minus-square ant-tree-switcher-line-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="minus-square"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
          />
          <path
            d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
          />
        </svg>
      </i>
    </span>
    <span
      class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="ant-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="ant-tree-child-tree ant-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="ant-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_open"
        >
          <i
            class="anticon anticon-minus-square ant-tree-switcher-line-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="minus-square"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M328 544h368c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
              />
              <path
                d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
          title="parent 1-0"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-0
          </span>
        </span>
        <ul
          class="ant-tree-child-tree ant-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <i
                class="anticon anticon-file ant-tree-switcher-line-icon"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <i
                class="anticon anticon-file ant-tree-switcher-line-icon"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class="ant-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="ant-tree-switcher ant-tree-switcher-noop"
            >
              <i
                class="anticon anticon-file ant-tree-switcher-line-icon"
              />
            </span>
            <span
              class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="ant-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <i
            class="anticon anticon-plus-square ant-tree-switcher-line-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="plus-square"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
              />
              <path
                d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
          title="parent 1-1"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-1
          </span>
        </span>
      </li>
      <li
        class="ant-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="ant-tree-switcher ant-tree-switcher_close"
        >
          <i
            class="anticon anticon-plus-square ant-tree-switcher-line-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="plus-square"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M328 544h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
              />
              <path
                d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
          title="parent 1-2"
        >
          <span
            class="ant-tree-title"
          >
            parent 1-2
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`renders ./components/tree/demo/search.md correctly 1`] = `
<div>
  <span
    class="ant-input-search ant-input-affix-wrapper"
    style="margin-bottom:8px"
  >
    <input
      class="ant-input"
      placeholder="Search"
      type="text"
    />
    <span
      class="ant-input-suffix"
    >
      <i
        class="anticon anticon-search ant-input-search-icon"
      />
    </span>
  </span>
  <ul
    class="ant-tree ant-tree-icon-hide"
    role="tree"
    unselectable="on"
  >
    <li
      class="ant-tree-treenode-switcher-close"
      role="treeitem"
    >
      <span
        class="ant-tree-switcher ant-tree-switcher_close"
      >
        <i
          class="anticon anticon-caret-down ant-tree-switcher-icon"
        />
      </span>
      <span
        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="ant-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-0
          </span>
        </span>
      </span>
    </li>
    <li
      class="ant-tree-treenode-switcher-close"
      role="treeitem"
    >
      <span
        class="ant-tree-switcher ant-tree-switcher_close"
      >
        <i
          class="anticon anticon-caret-down ant-tree-switcher-icon"
        />
      </span>
      <span
        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
        title=""
      >
        <span
          class="ant-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-1
          </span>
        </span>
      </span>
    </li>
    <li
      class="ant-tree-treenode-switcher-close"
      role="treeitem"
    >
      <span
        class="ant-tree-switcher ant-tree-switcher-noop"
      />
      <span
        class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
        title=""
      >
        <span
          class="ant-tree-title"
        >
          <span>
            <span
              style="color:#f50"
            />
            0-2
          </span>
        </span>
      </span>
    </li>
  </ul>
</div>
`;
